bug-fix: Force tags to wrap so there is alwasy room for the total cost box

--- a/src/styles.css
+++ b/src/styles.css
@@ -196,6 +196,7 @@ aside {
   border-radius: 8px;
   padding: 5px 30px;
   gap: 1rem;
+  flex-wrap: wrap;
   /* color: white */
 }
 
